<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="detailedVenue"
            type="nl.enochtech.testappaa.feature.venue_detail.data.VenueDetail" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:padding="8dp"
    tools:context=".feature.venue_detail.view.VenueDetailActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/title"
        android:hint="@string/app_name"
        android:textColor="@color/black"
        android:text="@{detailedVenue.name == null ? `` : detailedVenue.name}"
        />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:text="@{detailedVenue.description == null ? `` : detailedVenue.description}"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
             />

        <TextView
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact"
            app:setFormattedContact="@{detailedVenue.contact}"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            />

        <TextView
            android:id="@+id/shortUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/short_url"
            android:text="@{detailedVenue.shortUrl == null ? `` : detailedVenue.shortUrl}"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contact"
            />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            app:setFormattedaddress="@{detailedVenue.location == null ? `` : detailedVenue.location}"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shortUrl"
            />

        <TextView
            android:id="@+id/verified"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/verified"
            app:setVerifiedValue="@{detailedVenue.verified}"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address"
            />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textAlignment="center"
            android:visibility="visible"
            android:id="@+id/no_data_available_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/getting_detials"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>